get ideal humidity and add to DOM

--- a/api-template/index.html
+++ b/api-template/index.html
@@ -5,8 +5,9 @@
 	<meta charset="utf-8">
 	<meta name="description" content="This is where your description goes">
 	<meta name="keywords" content="one, two, three">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Title in the tab</title>
+	<title>Overnight Humidistat Settings</title>
 
 	<!-- external CSS link -->
 	<link rel="stylesheet" href="css/normalize.css">
@@ -15,10 +16,19 @@
 
 <body>
 
-	<h1>Humidistat Setting:</h1>
-	<h2 id="day1">Day 1:</h2><span>1</span>
-	<h2 id="day2">Day 2:</h2><span>1</span>
-	<h2 id="day3">Day 3:</h2><span>1</span>
+	<h1>Humidistat Settings:</h1>
+	<section>
+		<h2 id="day1">Day 1:</h2><span id="day1Humidity">1</span>
+	</section>
+	<section>
+		<h2 id="day2">Day 2:</h2><span id="day2Humidity">1</span>
+	</section>
+	<section>
+		<h2 id="day3">Day 3:</h2><span id="day3Humidity">1</span>
+	</section>
+
+
+
 
 
 
